# training-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  adapter.cc  bytes_order.cc  circular_ref.cc  class_derive.cc  cpp_ub.cc  crtp_benchmark.cc  crtp_example.cc  cspell.json  diamond.cc  dynamics_cast.cc  inplace_construct.cc  lock_free.cc  task_pool.cc  training.cc  wrapper_ref.cc
